--- a/challenge2.css
+++ b/challenge2.css
@@ -1,14 +1,17 @@
-
+* {
+    font-family: Helvetica, sans-serif;
+}
 
 /* Vorming grid voor upper section */
 .upperSection {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     padding: 2px;
     align-items: center;
+    margin-top: 20%;
+    margin-bottom: 35%;
     }
 
 /*Vormgeving upper section */
@@ -32,20 +35,32 @@
     }
 
 /* Vorming grid voor lower section */
-.lowerSection {
+.gridContainer {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-}
-
-.gegevens { 
-    grid-area: 2 / 1 / 5 / 6;
+    gap: 10%;
+    padding: 5%;
+    margin-bottom: 10%;
     background-color: orange;
+    border-radius: 15px;
 }
- 
 
+.grid-item {
+    background-color: white;
+    padding: 10%;
+}
+
+.left , .right {
+    display: inline;
+    
+}
+
+.left {
+    
+}
+
+.right {
+    padding-left: 35%;
+}
 
 
 
@@ -79,11 +94,38 @@
 
 
 
-/*Vormgeving glasplaat
+/*Vormgeving glasplaat*/
 .glass { 
     background: white;
     background: linear-gradient(to right bottom, 
     rgba(255, 255, 255, 0.7), 
     rgba(255, 255, 255, 0.3));
     border-radius: 15px;
-}*/
+}
+
+
+/* Vorming grid voor lower section */
+/* .lowerSection {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 0px;
+}
+
+.gegevens { 
+    grid-area: 2 / 1 / 3 / 3;
+    background-color: orange;
+    
+}
+ 
+/* Positionering left and right */
+/* .left {
+    display: inline-flex;
+    padding-left: 5%;
+}
+
+.right {
+    display: inline;
+    padding-left: 10%;
+} */ 
