--- a/challenge2.css
+++ b/challenge2.css
@@ -1,5 +1,6 @@
 * {
     font-family: Helvetica, sans-serif;
+    font-weight: 300;
 }
 
 /* Vorming grid voor upper section */
@@ -9,57 +10,76 @@
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     padding: 2px;
-    align-items: center;
     margin-top: 20%;
     margin-bottom: 35%;
-    }
+    /* align-items: center; */
+}
 
 /*Vormgeving upper section */
 #clock {
-    color: white;
     font-family: Helvetica, sans-serif;
-    letter-spacing: 1px;
+    color:rgb(17, 17, 63);
+    margin-top: 43%;
     text-align: center;
-    margin-top: 45%;
+    letter-spacing: 2.5px;
 }
 
 .zon {
+    display: grid;
+    grid-area: 2 / 3 / 3 / 3;
     width: 185px;
     height: 185px;
-    background-color: black;
-    border-radius: 50%;
-    box-shadow: rgb(115, 115, 116) 3px 3px 8px -1px;
     justify-self: center;
-    grid-area: 2 / 3 / 3 / 3;
     margin-top: -5%;
-    }
+    border-radius: 50%;
+    background: linear-gradient(to right bottom, 
+    rgba(255, 215, 83, 0.7), 
+    rgba(226, 27, 27, 0.3));
+}
 
 /* Vorming grid voor lower section */
 .gridContainer {
     display: grid;
-    gap: 10%;
-    padding: 5%;
-    margin-bottom: 10%;
-    background-color: orange;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-areas: "ad1"
+                         "ad2"
+                         "ad3"
+                         "ad4" ;
+    gap: 15px;
+    padding: 3%;
+    color: white;
+    background-color: rgb(17, 17, 63);
     border-radius: 15px;
 }
 
 .grid-item {
     background-color: white;
-    padding: 10%;
+    padding: 3%;
 }
 
 .left , .right {
-    display: inline;
-    
+    display: inline;  
 }
 
-.left {
-    
-}
+/* .left {
+    padding-top: 10%;
+} */
 
 .right {
-    padding-left: 35%;
+    font-weight: 250;
+    float: right;
+    padding-right: 2%;
+    /* padding-left: 40%; */
+}
+
+/*Vormgeving glasplaat*/
+.glass { 
+    background: white;
+    background: linear-gradient(to right bottom, 
+    rgba(255, 255, 255, 0.7), 
+    rgba(255, 255, 255, 0.3));
+    border-radius: 15px;
 }
 
 
@@ -76,12 +96,32 @@
     body {
         background-color: purple;
     }
+
+    .left , .right {
+        float: center;  
+    }
 }
+
+    
 
 /* Laptop (kleine desktop)*/
 @media only screen and (min-width: 1024px) and (max-width: 1598px) {
     body{
         background-color: pink;
+    }
+
+    .gridContainer {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin-top: -20%;
+        height: 10%;
+        gap: 3%;
+        padding: 2%;
+        padding-bottom: 0px;
+    }
+
+    .zon , .clock {
+        margin-top: -50%;
     }
 }
 
@@ -90,42 +130,8 @@
     body {
         background-color: brown;
     }
+
+    .gridContainer {
+        grid-template-columns: 1fr 1fr;
+    }
 }
-
-
-
-/*Vormgeving glasplaat*/
-.glass { 
-    background: white;
-    background: linear-gradient(to right bottom, 
-    rgba(255, 255, 255, 0.7), 
-    rgba(255, 255, 255, 0.3));
-    border-radius: 15px;
-}
-
-
-/* Vorming grid voor lower section */
-/* .lowerSection {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    grid-column-gap: 10px;
-    grid-row-gap: 0px;
-}
-
-.gegevens { 
-    grid-area: 2 / 1 / 3 / 3;
-    background-color: orange;
-    
-}
- 
-/* Positionering left and right */
-/* .left {
-    display: inline-flex;
-    padding-left: 5%;
-}
-
-.right {
-    display: inline;
-    padding-left: 10%;
-} */ 
